--- a/public/index.html
+++ b/public/index.html
@@ -5,52 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/web-coding.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Federica Iglesias</title>
     <meta
       name="description"
       content="Self Developed personal website build with React.js"
     />
-
-    <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Federica Iglesias | Portfolio" />
-    <meta
-      itemprop="description"
-      content="Self Developed personal website build with React.js"
-    />
-    <meta
-      itemprop="image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
-    />
-
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://soumyajit.vercel.app" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Federica Iglesias | Portfolio" />
-    <meta
-      property="og:description"
-      content="Self Developed personal website build with React.js"
-    />
-    <meta
-      property="og:image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
-    />
-
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Federica Iglesias | Portfolio" />
-    <meta
-      name="twitter:description"
-      content="Self Developed personal website build with React.js"
-    />
-    <meta
-      name="twitter:image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
-    />
+    <meta property="og:title" content="Federica Iglesias - Full Stack Developer" />
+    <meta property="og:description" content="Explore my work as a Full Stack Web Developer." />
+    <meta property="og:url" content="https://federicaiglesias.vercel.app/" />
   </head>
 
   <body>
