--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Federica Iglesias</title>
-    <meta property="og:title" content="Federica Iglesias - Full Stack Developer" />
-    <meta property="og:description" content="Explore my work as a Full Stack Web Developer." />
+    <meta
+      property="og:title"
+      content="Federica Iglesias - Full Stack Developer"
+    />
+    <meta
+      property="og:description"
+      content="Explore my work as a Full Stack Web Developer."
+    />
     <meta property="og:url" content="https://federicaiglesias.vercel.app/" />
+    <meta property="og:image" content="%PUBLIC_URL%/web.png" />
   </head>
 
   <body>
